--- a/htmlcss/index.html
+++ b/htmlcss/index.html
@@ -7,11 +7,16 @@
     <title>Welcome</title>
 </head>
 <body>
-    <h1>Welcome</h1>
-    <h2>Welcome</h2>
-    <h6>WELCOME !!!!</h6>
-    <h4>Welcome</h4>
-    <h5>Welcome</h5>
-    <h6>Welcome</h6>
+    <table>
+        <tr>
+            <td>username:</td>
+            <td><input type="input" /></td>
+        </tr>
+        <tr>
+            <td>password</td>
+
+            <td><input type="password" name="" id="1"> </td>
+        </tr>
+    </table>
 </body>
 </html>
