--- a/htmlcss/stud.html
+++ b/htmlcss/stud.html
@@ -29,14 +29,14 @@
         </tr>
         <tr>
             <td>Age</td>
-            <td><input type="number" min="0" max="111"></td>
+            <td><input type="number" min="0" max="120"></td>
         </tr>
         <tr>
             <td>Gender</td>
-            <td><input type="radio" name="" id="">Male <input type="radio" name="" id="">Female</td>
+            <td><input type="radio" name="gender">Male <input type="radio" name="gender">Female</td>
         </tr>
         <tr>
-            <td><input type="checkbox" name="" id="">I agree to the terms and conditions</td>
+            <td><input type="checkbox" >I agree to the terms and conditions</td>
         </tr>
         <tr>
             <td></td>
