--- a/htmlcss/pic.html
+++ b/htmlcss/pic.html
@@ -5,9 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Pic</title>
+    <style>
+        .new{
+            color:blue;
+    
+        }
+    </style>
 </head>
-<body>
+<body style="background-color:#aabbff">
     <img src="./1.jpg" alt="" height="500" width="700" >
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio odio tempore ea eligendi, quaerat optio et molestias eveniet cumque dolor numquam at vero quia incidunt iusto harum assumenda dicta soluta. Lorem ipsum dolor sit amet consectetur adipisicing elit. Non recusandae soluta placeat repudiandae minima cum nobis culpa suscipit molestias, ad ratione velit animi, aut veniam vitae ea sit quidem ut.</p>
+    <p style="color:#34495e">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio odio tempore ea eligendi, quaerat optio et molestias eveniet cumque dolor numquam at vero quia incidunt iusto harum assumenda dicta soluta. Lorem ipsum dolor sit amet consectetur adipisicing elit. Non recusandae soluta placeat repudiandae minima cum nobis culpa suscipit molestias, ad ratione velit animi, aut veniam vitae ea sit quidem ut.</p>
+    <p class="new">hello world. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis, est maxime! A, tenetur molestiae. Enim distinctio ipsam magni ex excepturi quaerat odio fuga? Et, quidem reprehenderit impedit consequatur similique commodi!</p>
 </body>
 </html>
