--- a/htmlcss/pic.html
+++ b/htmlcss/pic.html
@@ -5,15 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Pic</title>
-    <style>
-        .new{
-            color:blue;
-    
-        }
-        body{
-            background: wheat;
-        }
-    </style>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <img src="./1.jpg" alt="" height="500" width="700" >
