--- a/htmlcss/pic.html
+++ b/htmlcss/pic.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <img src="./1.jpg" alt="" height="500" width="700" >
+    <div class="newdiv">
     <p style="color:#34495e">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio odio tempore ea eligendi, quaerat optio et molestias eveniet cumque dolor numquam at vero quia incidunt iusto harum assumenda dicta soluta. Lorem ipsum dolor sit amet consectetur adipisicing elit. Non recusandae soluta placeat repudiandae minima cum nobis culpa suscipit molestias, ad ratione velit animi, aut veniam vitae ea sit quidem ut.</p>
     <p class="new">hello world. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis, est maxime! A, tenetur molestiae. Enim distinctio ipsam magni ex excepturi quaerat odio fuga? Et, quidem reprehenderit impedit consequatur similique commodi!</p>
+    </div>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet magni nobis accusamus facilis odio reiciendis. Corporis eos ratione quas in impedit possimus voluptates, doloremque sit nam illum excepturi nisi esse!</p>
 </body>
 </html>
